--- a/Chessboard/Chessboard.csproj
+++ b/Chessboard/Chessboard.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Pieces\Bishop.cs" />
     <Compile Include="Pieces\King.cs" />
     <Compile Include="Pieces\Knight.cs" />
+    <Compile Include="Pieces\Pawn.cs" />
     <Compile Include="Pieces\Piece.cs" />
     <Compile Include="Pieces\Point.cs" />
     <Compile Include="Pieces\Queen.cs" />
